[package]
name = "ppot-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify_ppot"

[[bin]]
name = "downloader"

[dependencies]
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve", "scalar_field"] }
ark-ec = { version = "0.3.0", default-features = false}
ark-ff = { version = "0.3.0", default-features = false}
ark-serialize = { version = "0.3.0", default-features = false, features = ["derive", "std"] }
ark-std = { version = "0.3.0", default-features = false }
blake2 = { version = "0.10.4", default-features = false }
curl = "0.4.44"
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
memmap = "0.7.0"
# manta-trusted-setup = { git = "https://github.com/Manta-Network/manta-rs/tree/main/manta-trusted-setup" }

[dev-dependencies]
ark-r1cs-std = { version = "0.3.1", default-features = false }
ark-snark = { version = "0.3.0", default-features = false }